fixed social login alignment in Firefox

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -2340,7 +2340,6 @@ button.signup, button.login{
 .social-login div{
     width:48.6%;
     margin-left: 3px;
-    margin-right: 3px;
     display: inline;
 }
 
